# career_kia

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
causal_artifacts/: ate_summary.json  doseresp_Rotational_speed.csv  doseresp_Tool_wear.csv  doseresp_Torque.csv
configs/: business.yaml
dashboard/: _helpers.py  app.py
dashboard/pages/: 1_실시간_모니터링.py  2_불량원인_설명.py  3_변수중요도_트렌드.py  4_Whatif_개입시뮬레이션.py  5_데이터출처_사용처.py
data/processed/: features.parquet
docs/: 01_프로젝트_개요.md  02_데이터_명세.md  03_방법론.md  04_결과_해석_및_한계.md
models_artifacts/: cv_summary.json  hybrid_model.joblib
notebooks/: 02_센서신호_전처리.ipynb  03_윈도잉_피처엔지니어링.ipynb  04_하이브리드_모델링.ipynb  05_XAI_SHAP_LIME.ipynb  06_인과추론_DAG_개입효과.ipynb  07_통합리포트_및_스토리텔링.ipynb
scripts/: reproduce.sh
src/career_kia/: __init__.py  config.py
src/career_kia/causal/: __init__.py  dag.py  intervention.py  run_analysis.py  time_series.py
src/career_kia/data/: __init__.py  download.py  loaders.py
src/career_kia/features/: __init__.py  freq_domain.py  run_pipeline.py  time_domain.py  windowing.py
src/career_kia/mlops/: __init__.py  drift_monitor.py  mlflow_utils.py
src/career_kia/models/: __init__.py  baselines.py  feature_matrix.py  hybrid.py  train.py
tests/: test_business_impact.py  test_causal.py  test_features.py  test_mlops.py  test_models.py  test_nl_generator_executive.py  test_normal_ranges.py  test_preprocessing.py  test_xai.py
xai_artifacts/: shap_global.parquet  shap_interactions_top10.csv  top_risk_narratives.json  top_risk_narratives.txt
(+14 files in other folders)
