[project]
name = "career-kia"
version = "0.1.0"
description = "SDF-Xplain: 제조 센서 기반 품질/고장 원인 분석 XAI & 인과추론 포트폴리오"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "career_kia" },
]

dependencies = [
    # 데이터 처리/신호 처리
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "pywavelets>=1.6",
    "pyarrow>=16.0",
    # 머신러닝
    "scikit-learn>=1.5",
    "lightgbm>=4.3",
    "pygam>=0.9",
    # XAI
    "shap>=0.45",
    "lime>=0.2.0.1",
    # 인과추론
    "dowhy>=0.11",
    "econml>=0.15",
    "causal-learn>=0.1.3",
    # MLOps
    "mlflow>=2.13",
    # 대시보드
    "streamlit>=1.35",
    "plotly>=5.22",
    # 유틸
    "requests>=2.32",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "joblib>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "jupyterlab>=4.2",
    "ipykernel>=6.29",
    "matplotlib>=3.9",
    "seaborn>=0.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/career_kia"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
